--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -71,26 +71,22 @@ The University of Chicago}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{H.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{H.\arabic{table}}
-\input{Appendices/CBAMethodology}
+\input{Appendices/Results}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
-\input{Appendices/Results}
+\input{Appendices/Sensitivity}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
-\input{Appendices/Sensitivity}
+\input{Appendices/AlternativeMethodologies}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{K.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{K.\arabic{table}}
-\input{Appendices/AlternativeMethodologies}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{L.\arabic{table}}
 \input{Appendices/CommonCritiques}
 
-\setcounter{figure}{0}  \renewcommand{\thefigure}{M.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{M.\arabic{table}}
+\setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{Lt.\arabic{table}}
 \input{Appendices/MoreOutcomes}
 
 \end{appendices}
