--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -86,7 +86,7 @@ The University of Chicago}
 \input{Appendices/CommonCritiques}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{Lt.\arabic{table}}
+\setcounter{table}{0}   \renewcommand{\thetable}{L.\arabic{table}}
 \input{Appendices/MoreOutcomes}
 
 \end{appendices}
