--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -1,10 +1,11 @@
 \begin{table}[H] 
+\centering 
 \begin{threeparttable}
 \caption{Treatment - Control Mean Difference by Cohort, ABC}
 \label{table:cohorts}
-\centering 
 \begin{tabular}{lcc} \toprule
  & (1) & (2) \\
+ \midrule
 Cohort 1 & 4.841 & -2.901 \\
  & (5.840) & (5.838) \\
 Cohort 2 & 0.071 & 1.882 \\
@@ -14,11 +15,13 @@ Cohort 3 & 9.143 & 10.038* \\
 Cohort 4 & 4.586 & 9.333* \\
  & (4.741) & (4.887) \\
  &  &  \\
+ \midrule
 Observations & 135 & 132 \\
- R-squared & 0.040 & 0.081 \\ \hline
+ R-squared & 0.040 & 0.081 \\ 
+ \bottomrule
  \end{tabular}
 \begin{tablenotes}
-\footnotesize
+\footnotesize 
 \item Note: This table displays the mean difference between the treatment and control groups in two measures of the Bayley Mental Development Index for ABC. Homoskedastic, asymptotic standard errors are in parentheses.
 \end{tablenotes}
 \end{threeparttable}
