--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -2,7 +2,7 @@
 
 \noindent \textbf{[JLG: As discussed yesterday, maybe this appendix should remain for internal circulation. The outcomes beyond the ``95'' are beyond what a treatment could clearly have an effect on and could potentially be measured with error. See the table below that lists the additional outcomes.]} \\
 
-\noindent In this appendix, we expand the analysis in Section~\ref{section:results} by considering an additional set of outcomes. Instead of considering \noutcomes, we consider \noutcomesexpp\ when pooling the sample and \noutcomesexpm\ and \noutcomesexpf\ when for males and females, respectively. Table \ref{tab:suppl-outcomes} lists supplemental outcomes that we do not consider in our primary analysis.\footnote{We fail to estimate some treatment effects because in some cases the treatment indicator and the controls entirely determine the outcome. For the \noutcomes\ in Section~\ref{section:results}, we do not have this problem.} The difference between this set of outcomes and the set we present in Section~\ref{section:results} is that (i) the outcomes in Section~\ref{section:results} contain outcomes we monetize when computing the cost-benefit analysis; and (ii) it is not entirely clear if treatment should have an effect on the outcomes we add in this appendix. The \noutcomes\ outcomes in this appendix include the \noutcomes\ outcomes in Section~\ref{section:results}.\\
+\noindent In this appendix, we expand the analysis in Section~\ref{section:results} by considering an additional set of outcomes. Instead of considering \noutcomes, we consider \noutcomesexpp\ when pooling the sample and \noutcomesexpm\ and \noutcomesexpf\ when for males and females, respectively. Table \ref{tab:suppl-outcomes} lists supplemental outcomes that we do not consider in our primary analysis.\footnote{We fail to estimate some treatment effects because in some cases the treatment indicator and the controls entirely determine the outcome. For the \noutcomes\ in Section~\ref{section:results}, we do not have this problem.} The difference between this set of outcomes and the set we present in Section~\ref{section:results} is that (i) the outcomes in Section~\ref{section:results} contain outcomes we monetize when computing the cost-benefit analysis; and (ii) it is not entirely clear if treatment should have an effect on the outcomes we add in this appendix. The \noutcomesexpp\ outcomes in this appendix include the \noutcomes\ outcomes in Section~\ref{section:results}.\\
 
 \singlespacing
 \input{output/abccare_outcomes_suppl}
