--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -6,13 +6,13 @@
 
 \noindent We proceed in a similar way to choose the second set of background variables. Instead of predicting enrollment into alternative preschool, we predict the relevant outcome of interest. For this exercise we use the variables in Panel (2), so we estimate $14 \choose 3$ models.\\
 
-\noindent Our set of control variables consists of these two sets of background variables.
+\noindent Our set of control variables consists of these two sets of background variables. \\
 
 \singlespacing
-\input{output/controlsets}
+\input{output/controlsets} 
 \doublespacing
 
-\noindent Table \ref{tab:main-outcomes} lists the 95 main outcomes that we test in our main analysis. We reverse the outcomes for which we consider a negative treatment effect socially positive.
+\noindent Table \ref{tab:main-outcomes} lists the 95 main outcomes that we test in our main analysis. We reverse the outcomes for which we consider a negative treatment effect socially positive. \\
 
 \singlespacing
 \input{output/abccare_outcomes_list}
